<resources>
    <string name="appname">jiayou</string>
    <string name="CurrentVersion">当前版本</string>
    <string name="CheckForUpdates">检查更新</string>
    <string name="DiscoverNewVersion">发现新的版本，现在更新？</string>
    <string name="NewVersionSize">新版本大小：</string>
    <string name="UpdateContent">更新内容：</string>
    <string name="UpdateNow">更新</string>
    <string name="NextTime">跳过</string>
    <string name="Downloading">正在下载</string>
    <string name="AppUpdates">应用更新</string>
    <string name="ApplyNewDownloadNotification">应用新下载通知</string>
    <string name="DownloadTheInstallationPackage">下载安装包</string>
    <string name="ReadyDownload">准备下载</string>
    <string name="DownloadingInstallationPackage">正在下载安装包</string>
    <string name="DownloadFailed">下载失败</string>
    <string name="NetworkExceptions">网络异常</string>
    <string name="ThereNoData">还没有数据哦</string>
    <string name="ClickRetry">点击重试</string>
    <string name="loadingPleaseWait">正在加载,请稍等…</string>
    <string name="NetworkError">网络不可用，请稍后再试。</string>
    <string name="DataParsingFailed">数据解析失败</string>
    <string name="welcome_main_clause">服务条款</string>
    <string name="pleaseLoginAgain">身份已过期,请重新登录</string>
    <string name="AccountLoginOtherPlaces">账号在其它地方登录,请重新登录</string>
    <string name="UserNotLoggedIn">用户未登录</string>
    <string name="AccountHasBeenFrozen">账号被冻结</string>
    <string name="RealNameCertification">实名认证</string>
    <string name="version_unkown">未获取到版本号 </string>
    <string name="TabText1">首页</string>
    <string name="TabText4">我的</string>
    <string name="make_money">我要赚钱</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="click_refresh">点击刷新</string>
    <string name="data_empty">这里是空的呢~</string>
    <string name="not_network">网络出问题了请检查网络设置~</string>
    <string name="more_error">加载异常！继续上拉重新加载</string>
    <string name="is_need_ad">open</string>
    <string name="packagename">com.hwtx.dududh</string>
    <string name="product">嘟嘟</string>
    <string name="brandid">dudu</string>
    <string name="my_account">我的账户</string>
    <string name="url_share">http://route.edawtech.com/share</string>
    <string name="uri_prefix">http://paas.edawtech.com</string>
    <string-array name="url_prots">
        
        <item>http://paas.edawtech.com</item>
        
        
    </string-array>
    <string-array name="addr_urls">
        <item></item>
    </string-array>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="pay_result_user_cancel">用户取消支付.</string>
    <string name="pay_result_success">付款成功</string>
    <string name="more_load">加载中~</string>
    <string name="more_period">已经到底啦~</string>
    <string name="load_more">加载中~</string>
    <string name="refuel_detail_prompt"><![CDATA[请务必　<font color="#FFFF0000"><big>先到达加油站</big></font>　与工作人员确认后再付款，切勿先买单后加油，避免异常订单的产生]]></string>
    <string name="monetyt"><![CDATA[<font <big><big>5</big></big></font>　元]]></string>
    <string name="dial_layout_bind_prompt">您尚未绑定，绑定后才可以拨打电话，现在马上去绑定吧！</string>
    <string name="dial_layout_login_prompt">您尚未登录，登录后才可以拨打电话，现在马上去登录吧！</string>
    <string name="seach_bill_login_prompt">您尚未登录，登录后才可以查询话单，现在马上去登录吧！</string>
    <string name="nologin_auto_hint">您尚未登录，登录后才可使用此功能，现在马上去登录吧！</string>
    <string name="login_changepwd_prompt">您尚未登录，登录后才可以修改密码，现在马上去登录吧！</string>
    <string name="seach_balance_login_prompt">您尚未登录，登录后才可以查询余额，现在马上去登录吧！</string>
    <string name="login_bind_prompt">您尚未登录，登录后才可以绑定手机，现在马上去登录吧！</string>
    <string name="vip_login_hint">您尚未登录，登录后才可以查看VIP功能，现在马上去登录吧！</string>
    <string name="login_prompt0">您尚未登录，登录后才可以操作，现在马上去登录吧！</string>
    <string name="login_prompt">您尚未登录，登录后才可以进入我的活动，现在马上去登录吧！</string>
    <string name="login_prompt1">您尚未登录，登录后才可以赚话费，现在马上去登录吧！</string>
    <string name="login_prompt2">您尚未登录，登录后才可以进入我的话费，现在马上去登录吧！</string>
    <string name="login_prompt3">您尚未登录，登录后才可以充值，现在马上去登录吧！</string>
    <string name="login_prompt4">您尚未登录，登录后才可以查看，现在马上去登录吧！</string>
    <string name="login_prompt5">您尚未登录，登录后才可以进入我的套餐，现在马上去登录吧！</string>
    <string name="login_prompt6">您尚未登录，登录后才可以进入我的余额，现在马上去登录吧！</string>
    <string name="login_prompt7">您还没有绑定邀请人哦！</string>
    <string name="login_prompt8">直接充值</string>
    <string name="login_prompt9">去绑定</string>
    <string name="login_prompt10">您尚未登录，登录后才可以购买，现在马上去登录吧！</string>
    <string name="buy_tip">账号未登录，不能购买</string>
    <string name="no_network_prompt">当前网络不支持，马上检查网络设置吧！</string>
    <string name="prompt">提示</string>
    <string name="favourate_button_tariff">资费查询</string>
    <string name="invite_text17">已邀请人数</string>
    <string name="webview_load_error">加载失败,请点击屏幕重试</string>
    <string name="help">帮助中心</string>
    <string name="point">信息</string>
    <string name="vs_balance_expend">话单查询</string>
    <string name="call_display_login_prompt">您尚未登录，登录后才可以设置来电显示，现在马上去登录吧！</string>
    <string name="phone_call">手机拨打</string>
    <string name="vs_miss_call">来电显示</string>
    <string name="vs_miss_call_d">%d个未接来电</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="vs_myselft_account">佳油通讯号：</string>
    <string name="recruit_hint">99元开通VIP会员</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="vs_about_weibo">官方微博</string>
    <string name="vs_about_weixin">微信公众号</string>
    <string name="vs_about_server_QQ">客服 QQ</string>
    <string name="vs_about_server_phone">客服电话</string>
    <string name="vs_about_server_time">客服时间</string>
    <string name="vs_about_update_tv_str">版本更新</string>
    <string name="vs_about_bq_tv_str">版权所有</string>
    <string name="vs_about_fw_tv_str">服务条款</string>
    <string name="vs_about_help_tv_str">帮助中心</string>
    <string name="vs_about_fk_tv_str">意见反馈</string>
    <string name="vs_about_pf_tv_str">去评分</string>
    <string name="vs_about_com_wap">电脑官网：</string>
    <string name="vs_about_phone_wap">手机官网：</string>
    <string name="vs_about_server_phoneNumber">客服电话：</string>
    <string name="vs_about_company_cn">深圳市易道科技有限公司</string>
    <string name="vs_about_company_en">Copyright © dudu ,All Right Reserved</string>
    <string name="upgrade_download_notify">下载通知</string>
    <string name="upgrade_update">下载</string>
    <string name="upgrade_getsize">正在获取文件大小...</string>
    <string name="upgrade_havedownload" formatted="false">总计%s K,已经下载了%s K</string>
    <string name="upgrade_checking_version">正在检测版本，请稍后...</string>
    <string name="upgrade_updateerror">下载出错了，请看出错信息：</string>
    <string name="btn_save">保存</string>
    <string name="edit_address">修改收货地址</string>
    <string name="add_address">新增收货地址</string>
    <string name="choose_address">选择收货地址</string>
    <string name="my_addresses">收货地址</string>
    <string name="vs_code_find">二维码扫描</string>
    <string name="my_tv10">关于我们</string>
    <string name="curstomer_server_qq">2381172498</string>
    <string name="curstomer_server_mobile">075528316171</string>
    <string name="curstomer_server_time">9:00-21:00</string>
    <string name="curstomer_server_copyright">嘟嘟通讯网络科技</string>
    <string name="curstomer_server_wechat">szwind163</string>
    <string name="curstomer_server_sina">\@嘟嘟通讯软件</string>
    <string name="request_failinfo">请求失败，请稍后再试！</string>
    <string name="account_cid_tv_str">来电显示</string>
    <string name="not_network_connon_msg">网络无连接</string>
    <string name="loading_special_info">正在加载中,请稍后...</string>
    <string name="call_display_turnningmsg">正在为您开通,请稍后...</string>
    <string name="turnning_off_msg">正在执行取消来电显示服务,请稍后...</string>
    <string name="call_display_haveopen">来电显示服务已开启</string>
    <string name="call_display_haveclose">来电显示服务已关闭</string>
    <string name="call_display_openfail">开通来电显示失败，请稍后再试</string>
    <string name="call_display_closefail">关闭来电显示失败，请稍后再试</string>
    <string name="vs_calltype_hint">拨打设置</string>
    <string name="vs_myexchange_detail">充值卡列表</string>
    <string name="input_wrong_phone_1">请输入手机号</string>
    <string name="input_wrong_phone">您输入的是无效的手机号</string>
    <string name="bind_input_proving">请输入验证码</string>
    <string name="bind_loading_ask">正在提交绑定请求，请稍后</string>
    <string name="bind_loading">正在提交获取请求，请稍后...</string>
    <string name="bind_old_phonenumber">原绑定电话:</string>
    <string name="bind_success">绑定成功，您现在可以拨打电话了！</string>
    <string name="bind_get_success">获取成功，请稍后查看短信</string>
    <string name="bind_fail">绑定失败，请稍后再试...</string>
    <string name="vs_mycheck_detail">话单查询</string>
    <string name="vs_login_btn_hint">登录</string>
    <string name="vs_pwd_isnull_str">密码不能为空</string>
    <string name="vs_pwd_xy6_str">密码长度小于6位</string>
    <string name="vs_phone_erro_isnull">手机/账户不能为空</string>
    <string name="vs_mypackage_detail">我的套餐</string>
    <string name="vs_myaccount_detail">我的余额</string>
    <string name="vs_myinfo_text_title">个人信息</string>
    <string name="vs_myinfotext_name">设置昵称</string>
    <string name="vs_myinfotext_phone">手机号码</string>
    <string name="vs_myinfotext_sex">设置性别</string>
    <string name="vs_myinfotext_bir">设置生日</string>
    <string name="vs_myinfotext_mailbox">设置邮箱</string>
    <string name="vs_myinfotext_area">设置地区</string>
    <string name="my_tv_recharge">充值中心</string>
    <string name="my_tv_recharge_bangbangfs">积分充值卡</string>
    <string name="charge_card_error">充值卡序列号位数不对，请输入正确的充值卡序列号！ </string>
    <string name="charge_pwd_error">充值卡密码位数不对，请输入正确的充值卡密码！ </string>
    <string name="title_bar_recharge">充值方式</string>
    <string name="recharge_paytype_hinit2">无需安装支付宝客户端直接支付</string>
    <string name="recharge_weixin_pay_tips">推荐安装微信5.0及以上版本的使用</string>
    <string name="lb_alter">嘟嘟通讯电话提示</string>
    <string name="vs_reghist_title_hint">注册</string>
    <string name="vs_code_isnull_str">验证码不能为空</string>
    <string name="vs_phone_erro">请输入正确的手机号码</string>
    <string name="vs_phone_toast_isnull">手机号不能为空</string>
    <string name="welcome_main_elecdeal">电子协议</string>
    <string name="register_successsumbitmsg">注册成功</string>
    <string name="register_fail_info">注册失败，请稍后再试...</string>
    <string name="register_successcode">系统已把验证码发到您的手机,请稍后留意您的短信</string>
    <string name="register_fail_code">获取验证码失败，请稍后再试</string>
    <string name="seting_title">设置</string>
    <string name="upgrade_is_a_new">已是最新版本</string>
    <string name="vs_setiong_exit_dialog_hint">您确定要退出佳油吗？</string>
    <string name="vs_seting_call_voice">声音设置</string>
    <string name="vs_seting_voice_str">拨打按键音</string>
    <string name="vs_seting_voice_hint">开启拨打按键音后，点击键盘会有提示音。</string>
    <string name="vs_seting_call_get">自动接听</string>
    <string name="select_photo_source">请选择图片来源</string>
    <string name="take_photo">拍照</string>
    <string name="from_album">从相册选取</string>
    <string name="updata_hint">检测到新版本</string>
    <string name="updata_version">版本号：1.0.0</string>
    <string name="updata_content">更新内容：</string>
    <string name="updata_now">立即升级</string>
    <string name="vs_redinfo_a">步骤1.登录您的微信，点击右上角"+"号后添加朋友。</string>
    <string name="vs_redinfo_b">步骤2.点击公众号，然后在搜索框输入佳油APP，点击搜索，找到我们的公众号。</string>
    <string name="vs_redinfo_c">步骤3.点击佳油APP。</string>
    <string name="vs_redinfo_d">步骤4.在公众账号下面，点击关注，会自动进入公众号。</string>
    <string name="vs_redinfo_e">步骤5.进入公众号后，点击绑定，进入绑定页面。</string>
    <string name="vs_redinfo_f">步骤6.在绑定页面，输入您佳油注册的手机号和密码，点击绑定完成佳油与您微信账号的绑定。</string>
    <string name="vs_setiong_pwd_str">修改密码</string>
    <string name="vs_about_help_customer">关于我们</string>
    <string name="vs_setiong_exit_str">退出登录</string>
    <string name="vs_phone_hint_and_account">请输入手机号/账号</string>
    <string name="vs_password_sr_hint">请输入密码</string>
    <string name="vs_set_register_show_hint">免费注册</string>
    <string name="vs_login_reset_password_hint">忘记密码</string>
</resources>