<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="@color/color_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:text="@string/updata_hint"/>

                <FrameLayout
                    android:id="@+id/fl_close"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/icon_close_hint" />
                </FrameLayout>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_version"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_text"
                android:text="@string/updata_version"/>
            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_text"
                android:text="@string/updata_content"/>
            <TextView
                android:id="@+id/tv_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_text"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <!--<TextView-->
                <!--android:id="@+id/tv_cancel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:textColor="@color/color_theme"-->
                <!--android:text="@string/updata_not"/>-->
                <TextView
                    android:id="@+id/tv_confirm"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_theme_2"
                    android:text="@string/updata_now"
                    android:layout_marginLeft="18dp"
                    android:layout_marginStart="18dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>